Added css and update UI individual house

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,12 +13,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
+
     <!-- Regular CSS -->
-    <link rel="stylesheet" href="/public/css/style.css" /> 
+    <link rel="stylesheet" href="/public/css/style.css" />
     <link rel="stylesheet" href="/public/css/houseForm.css"> <!-- For the form on the main page -->
     <link rel="stylesheet" href="/public/css/houseList.css"> <!-- The grid that shows a list of houses -->
-    <link rel="stylesheet" href="/public/css/housePage.css"> <!-- The individual house page that shows all the house information -->
+    <link rel="stylesheet" href="/public/css/housePage.css">
+    <!-- The individual house page that shows all the house information -->
 
 </head>
 
@@ -41,8 +42,8 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="">Home <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/house/add">Add</a></li>
-                            <li><a href="/house/">Search</a></li>
-                            <li><a href="/house/">Manage</a></li>
+                            <li><a href="/house">Search</a></li>
+                            <li><a href="/house">Manage</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
