Added css and update UI list house

--- a/views/pages/mainPage.handlebars
+++ b/views/pages/mainPage.handlebars
@@ -100,7 +100,7 @@
                 <p class="paraClass" id="priceInfo"> Rent: ${{rent}}/mo
             </div>
 
-            <a href="{{this._id}}">View Details</a>
+            <a href="house/{{this._id}}">View Details</a>
         </div>
         {{/each}}
 
