Finish the combination of review and comment

--- a/views/pages/mainPage.handlebars
+++ b/views/pages/mainPage.handlebars
@@ -87,7 +87,7 @@
          {{#each list}}
             <div class="col-md-4 house">
                 <div class="cover-container">
-                    <a href="house/{{this._id}}">
+                    <a href="/house/{{this._id}}">
                         <img class="cover-item" src="{{this.houseImage}}" alt="house">
                         <div class="overlay"> More Information </div>
                     </a>
