--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,15 +23,15 @@
   font-style: initial;
 }
 
-#commentButton {
+/* #commentButton {
   color: cadetblue;
   background-color: black;
   font-size: medium;
   font-family: "Times New Roman", Times, serif;
   font-weight: bolder;
-}
+} */
 
-#commentDoneButton {
+.commentDone {
   color: whitesmoke;
   background-color: green;
   font-size: medium;
@@ -39,7 +39,7 @@
   font-weight: bolder;
 }
 
-#error {
+.error {
   color: red;
   font-size: medium;
   font-family: "Times New Roman", Times, serif;
