--- a/views/pages/mainPage.handlebars
+++ b/views/pages/mainPage.handlebars
@@ -7,9 +7,6 @@
                 When the user submits, should redirect to the /search page
             Displays a grid view of all the houses
 
-            Also will allow the user to login, but we'll add this later
-            And we'll add the CSS later as well
-
         Search bar specifications:
             - A range of rent values
             - Start date and end date range
@@ -20,6 +17,8 @@
                 - Zip
             - Pet friendly (checkbox)
             - Parking available (checkbox)
+            - House type (dropdown)
+            - # of bedrooms
 
         More specifications could be added
      -->
@@ -27,51 +26,51 @@
     <!-- CSS for ths form is in houseForm.css -->
     <div id="houseSearchForm">
         <form action="/house/search" method="POST">
-            <div id="rent" class="form-horizontal col-md-3">
+            <div id="rent" class="form-horizontal col-md-3 form-group">
                 <label for="rent-min" class="control-label"> Rent Min. </label>
-                <input type="text" name="rent-min" id="rent-min" placeholder="0" class="form-control">
+                <input type="number" name="rent-min" id="rent-min" placeholder="0" class="form-control">
                 <label for="rent-max" class="control-label"> Rent Max. </label>
-                <input type="text" name="rent-max" id="rent-max" placeholder="2000" class="form-control">
+                <input type="number" name="rent-max" id="rent-max" placeholder="2000" class="form-control">
             </div>
 
-            <div id="date" class="form-horizontal col-md-3">
+            <div id="date" class="form-horizontal col-md-3 form-group">
                 <label for="date-start" class="control-label"> Start Date </label>
-                <input type="text" name="date-start" id="date-start" placeholder="MM/DD/YYYY" class="form-control">
+                <input type="date" name="date-start" id="date-start" placeholder="MM/DD/YYYY" class="form-control">
                 <label for="date-end" class="control-label"> End Date </label>
-                <input type="text" name="date-end" id="date-end" placeholder="MM/DD/YYYY" class="form-control">
+                <input type="date" name="date-end" id="date-end" placeholder="MM/DD/YYYY" class="form-control">
             </div>
 
             <div id="address">
                 <!-- There probably is a better way to do this -->
-                <div class="form-horizontal col-md-3">
+                <div class="form-horizontal col-md-3 form-group">
                     <label for="house-number" class="control-label"> House Number </label>
-                    <input type="text" name="house-number" id="house-number" placeholder="123" class="form-control">
+                    <input type="number" name="house-number" id="house-number" placeholder="123" class="form-control">
                     <label for="house-street" class="control-label"> Street </label>
                     <input type="text" name="house-street" id="house-street" placeholder="Washington Street"
                         class="form-control">
                 </div>
-                <div class="form-horizontal col-md-2">
+                <div class="form-horizontal col-md-2 form-group">
                     <label for="house-city" class="control-label"> City </label>
                     <input type="text" name="house-city" id="house-city" placeholder="Hoboken" class="form-control">
 
                     <label for="house-state" class="control-label"> State </label>
                     <input type="text" name="house-state" id="house-state" placeholder="NJ" class="form-control">
                 </div>
-                <div class="form-horizontal col-md-1">
+                <div class="form-horizontal col-md-1 form-group">
                     <label for="house-zipcode" class="control-label"> Zip Code </label>
-                    <input type="text" name="house-zipcode" id="house-zipcode" placeholder="07030" class="form-control">
+                    <input type="number" name="house-zipcode" id="house-zipcode" placeholder="07030" class="form-control">
                 </div>
             </div>
 
             <div id="radio" class="form-inline">
-                <fieldset id="pet" class="col-md-3">
+                <fieldset id="pet" class="col-md-3 form-group">
                     <legend id="pet-name"> Pet Friendly? </legend>
                     <label for="pet-yes" class="radio-inline"> Yes </label>
                     <input type="radio" name="pet" id="pet-yes" value="pet-yes" class="form-control">
                     <label for="pet-no" class="radio-inline"> No </label>
                     <input type="radio" name="pet" id="pet-no" value="pet-no" class="form-control">
                 </fieldset>
-                <fieldset id="park" class="col-md-3">
+                <fieldset id="park" class="col-md-3 form-group">
                     <legend id="park-name"> Parking available? </legend>
                     <label for="park-yes" class="radio-inline"> Yes </label>
                     <input type="radio" name="park" id="park-yes" value="park-yes" class="form-control">
@@ -79,7 +78,21 @@
                     <input type="radio" name="park" id="park-no" value="park-no" class="form-control">
                 </fieldset>
             </div>
-            <button class="col-md-1" type="submit" id="button"> Submit </button>
+
+            <div id="house-type" class="col-md-12">
+                <div id="house-variant" class="col-md-3 form-group">
+                    <label for="variant"> Select house type: </label>
+                    <input type="text" name="variant" id="variant" placeholder="Apartment" class="form-control">
+                </div>
+
+                <div id="bed" class="col-md-2 form-group">
+                    <label for="house-bed"> Bedroom amount </label>
+                    <input type="number" name="house-bed" id="house-bed" class="form-control" placeholder="1">
+                </div>
+
+                <button class="col-md-1" type="submit" id="button"> Submit </button>
+            </div>
+
         </form>
     </div>
 
@@ -94,10 +107,13 @@
 
             </div>
             <div>
-                <p class="paraClass" id="address"> {{houseNumber}} {{street}} <br> {{city}}, {{state}}, {{zip}} </p>
+                <p class="paraClass" id="address"> {{houseNumber}} {{street}} <br> {{city}}, {{state}}, {{pincode}} </p>
             </div>
             <div>
-                <p class="paraClass" id="priceInfo"> Rent: ${{rent}}/mo
+                <p class="paraClass" id="priceInfo"> 
+                    Rent: ${{rent}}/mo <br> 
+                    {{houseType.type}} | {{houseType.bedroom}} Bedroom(s)
+                </p>
             </div>
 
             <a href="house/{{this._id}}">View Details</a>
