Edit and delete house - done

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,7 +43,9 @@
                         <ul class="dropdown-menu">
                             <li><a href="/house/add">Add</a></li>
                             <li><a href="/house">Search</a></li>
-                            <li><a href="/house">Manage</a></li>
+                            <li><a href="/house/updateHouse">Manage</a></li>
+
+
                         </ul>
                     </li>
                     <li class="dropdown">
