--- a/views/pages/mainPage.handlebars
+++ b/views/pages/mainPage.handlebars
@@ -94,7 +94,7 @@
 
             </div>
             <div>
-                <p class="paraClass" id="address"> {{houseNumber}} {{street}} <br> {{city}}, {{state}}, {{zip}} </p>
+                <p class="paraClass" id="address"> {{houseNumber}} {{street}} <br> {{city}}, {{state}}, {{pincode}} </p>
             </div>
             <div>
                 <p class="paraClass" id="priceInfo"> Rent: ${{rent}}/mo
@@ -105,21 +105,4 @@
         {{/each}}
 
     </div>
-
-
-    {{!-- <!-- CSS for this part is in houseList.css -->
-    <div class="form-inline houseList col-md-12">
-        {{#each list}}
-        <div class="col-md-4 house">
-            <div class="cover-container">
-                <a href="house/{{this._id}}">
-                    <img class="cover-item" src="{{this.houseImage}}" alt="house">
-                    <div class="overlay"> More Information </div>
-                </a>
-            </div>
-
-            <p id="houseDescription"> {{this.description}} </p>
-        </div>
-        {{/each}}
-    </div> --}}
 </div>
