--- a/views/pages/houseList.handlebars
+++ b/views/pages/houseList.handlebars
@@ -19,6 +19,7 @@
     <!-- CSS in houseList.css -->
     <div class="grid-container">
         <div class="grid-item">
+
             {{#each list}}
             <div class="cover-container">
                 {{#each this.profilePicture}}
@@ -26,12 +27,22 @@
                 {{/each}}
             </div>
             <div>
-                <p class="paraClass" id="address"> {{houseNumber}} {{street}} <br> {{city}}, {{state}}, {{zip}} </p>
+                <p class="paraClass" id="address"> {{houseNumber}} {{street}} <br> {{city}}, {{state}}, {{pincode}} </p>
             </div>
 
-            <a href="{{this._id}}">More Details</a>
-            <p id="houseDescription"> {{this.description}} </p>
+            <a href="{{this._id}}">View Details</a>
+
+            <br>
+
+            <button id="edit" + {{this._id}} class="editComment" onclick="editHouse()" value={{this._id}}
+                style="display: {{canUpdate}}"><a href="/house/add/{{this._id}}">Edit</a></button>
+
+            <button type=" button" id="delete" + {{this._id}} class="deleteComment" onClick="deleteHouse()"
+                value={{this._id}} style="display: {{canUpdate}}">Delete</button>
+            <br>
+            <br>
             {{/each}}
+
         </div>
     </div>
 </div>
