Profile picture house - done

--- a/views/pages/houseManage.handlebars
+++ b/views/pages/houseManage.handlebars
@@ -93,11 +93,10 @@
     <div class="form-row">
         <h3> House Images</h3>
         <div>
-            <label for="image_uploads" style="color: blue;">Choose images to upload (PNG, JPG)</label>
-            <input type="file" id="image_uploads" name="image_uploads" accept=".jpg, .jpeg, .png" multiple>
+            <input type='file' id="image_uploads" name="image_uploads" accept=".jpg, .jpeg, .png" multiple />
+            {{!-- <canvas id="canvas" width="300" height="200"></canvas> --}}
         </div>
         <div class="preview">
-
             <p>No files currently selected for upload</p>
         </div>
 
