--- a/views/pages/houseList.handlebars
+++ b/views/pages/houseList.handlebars
@@ -25,9 +25,7 @@
 
 
             <div class="cover-container">
-
-                <img class="cover-item" src="{{this.profilePicture}}" alt="house">
-
+                <img class="cover-item" src="{{this.profilePicture.[0]}}" alt="house">
             </div>
 
             <div>
@@ -56,6 +54,7 @@
 
             </div>
             {{/each}}
+
 
         </div>
     </div>
