--- a/views/pages/individualHouse.handlebars
+++ b/views/pages/individualHouse.handlebars
@@ -20,7 +20,7 @@
 
     <div class="cover-container">
         {{#each houseImage}}
-        <img class="cover-item" src="{{this}}" alt="house" style="width:40%">
+        <img class="cover-item" src="{{this}}" alt="house">
         {{/each}}
     </div>
 
