Integrated rating system into house pages

--- a/views/pages/individualHouse.handlebars
+++ b/views/pages/individualHouse.handlebars
@@ -45,6 +45,17 @@
             <p class="paraClass" id="priceInfo"> Rent: ${{rent}} <br> Lease duration: {{startDate}} - {{endDate}} </p>
         </div>
 
+        
+        <div class="form-group col-md-6">
+            <h3 class="header"> House Type </h3>
+            <p class="paraClass" id="priceInfo"> 
+                Variant: {{variant}} <br>
+                {{bedroom}} Bedroom(s) <br>
+                {{hall}} Hall(s) <br>
+                {{kitchen}} Kitchen(s)
+            </p> 
+        </div>
+        
         <div class="form-group col-md-6">
             <h3 class="header">Pet Friendly </h3>
             <p class="paraClass"> {{pet}} </p>
@@ -79,11 +90,6 @@
 </div>
 
 
-
-
-<br>
-<br>
-</div>
 
 
 <!--Reviews-->
