--- a/views/pages/mainPage.handlebars
+++ b/views/pages/mainPage.handlebars
@@ -97,10 +97,34 @@
         </form>
     </div>
 
+    <div class="form-inline houseList col-md-12">
+        <h3> Highest Rated Houses </h3>
+        {{#each rateList}}
+        <div class="col-md-4 house">
+            <div class="cover-container">
+
+                <img class="cover-item" src="{{this.profilePicture.[0]}}" alt="house">
+
+            </div>
+            <div>
+                <p class="paraClass" id="address"> {{houseNumber}} {{street}} <br> {{city}}, {{state}}, {{pincode}} </p>
+            </div>
+            <div>
+                <p class="paraClass" id="priceInfo">
+                    Rent: ${{rent}}/mo <br>
+                    {{houseType.type}} | {{houseType.bedroom}} Bedroom(s)
+                </p>
+            </div>
+
+            <a href="house/{{this._id}}">View Details</a>
+        </div>
+        {{/each}}
+
+    </div>
 
     <div class="form-inline houseList col-md-12">
-
-        {{#each list}}
+        <h3> Most Reviewed Houses </h3>
+        {{#each reviewList}}
         <div class="col-md-4 house">
             <div class="cover-container">
 
