--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,3 +65,61 @@
   height: 100%;
   cursor: pointer;
 }
+
+.reviewPic{
+  position: relative;
+  left: 0px;
+  top: 0px;
+  margin-top: 0px;
+  margin-left: 0px;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  background: grey;
+  border-color: black;
+  border-style:solid; 
+  border-width:1px; 
+  border-color:#000;
+  text-align:center;
+  overflow: hidden;
+}
+.reviewUser{
+  float: left;
+  position: relative;
+  margin-top: -23px;  
+  left: 40px;
+  top: 0px;
+}
+.reviewPic img{
+  width: 100%;
+  height: 100%;
+}
+
+.commentPic{
+  position: relative;
+  left: 0px;
+  top: 0px;
+  margin-top: 0px;
+  margin-left: 0px;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  background: grey;
+  border-color: black;
+  border-style:solid; 
+  border-width:1px; 
+  border-color:#000;
+  text-align:center;
+  overflow: hidden;
+}
+.commentUser{
+  float: left;
+  position: relative;
+  margin-top: -23px;  
+  left: 35px;
+  top: 0px;
+}
+.commentPic img{
+  width: 100%;
+  height: 100%;
+}
