--- a/views/pages/individualHouse.handlebars
+++ b/views/pages/individualHouse.handlebars
@@ -91,9 +91,12 @@
     <h2>{{aveRate}} out of 5</h2>
     {{#each reviewsList}}
     <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">
-                {{this.username}}
+        <div class="panel-heading" >
+            <div class="reviewPic">
+			    <img src="/public/image/{{this.profileImg}}" alt="user">
+		    </div>
+            <h3 class="panel-title reviewUser">
+                <a href="http://localhost:3000/account/{{this.reviewData.userId}}">{{this.username}}</a>
             </h3>
         </div>
         <div class="panel-body">
@@ -104,8 +107,12 @@
                 {{#each this.reviewData.comments}}
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <label class="commentUsername">{{this.userName}}</label>
+                        <div class="commentPic">
+			                <img src="/public/image/{{this.profilePicture}}" alt="user">
+		                </div>
+                        <h4 class="panel-title commentUser">
+                            
+                            <label class="commentUsername"><a href="http://localhost:3000/account/{{this.userId}}">{{this.userName}}</a></label>
                         </h4>
                     </div>
                     <div class="panel-body">
