Delete the user account

--- a/views/pages/account.handlebars
+++ b/views/pages/account.handlebars
@@ -114,5 +114,8 @@
 		</div>
 	</div>
 </div>
+<button type="button" id="deleteButton" onclick="deleteAccount()"
+		class="btn btn-default"> Delete Your Account</button>
 
 <script type="text/javascript" src="/public/js/profilePicture.js"></script>
+<script type="text/javascript" src="/public/js/account.js"></script>
