Fixed a bug where uploading photos and deleting comments did not refresh

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,8 +34,7 @@
                     <li class="dropdown" class="active">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="">User <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/users">Add</a></li>
-                            <li><a href="/users">Manage</a></li>
+                            <li><a href="/account">Manage</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
