--- a/views/pages/account.handlebars
+++ b/views/pages/account.handlebars
@@ -74,7 +74,7 @@
 					<div class="panel-body">
 						<p id="rating">Rating: {{this.rating}} </p>
 						<p id="reviewText">Reviews:{{this.reviewText}} </p>
-						<a href="house/{{this.houseId}}">View the Review and Comments.</a>
+						<a href="/house/{{this.houseId}}">View the Review and Comments.</a>
 					</div>
 				</div>
 				{{/each}}
